# adventofcode2020

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  tests.yml
adventofcode2020/day2/: main.py
adventofcode2020/day3/: main.py
adventofcode2020/day3/test/: test_main.py
adventofcode2020/day4/: data_rules.yml  main.py
adventofcode2020/day4/test/: conftest.py  test_main.py
day1/: 1.txt  main.py
day2/: main.py
day3/: main.py
day3/test/: test_main.py
day4/: main.py
day4/test/: conftest.py  test_main.py
