[tool.poetry]
name = "adventofcode2020"
version = "0.1.0"
description = ""
authors = ["Geil, Nicholas <nicholas.geil@mckesson.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
pytest = "^6.1.2"
mock = "^4.0.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
